PostGIS 3.0.0
2019/xx/xx
* Breaking Changes *
  - #3888, Raster support now available as a separate extension
    (Sandro Santilli)
* New Features *
  - #2902, postgis_geos_noop (Sandro Santilli)
* Enhancements and fixes *
  - #4153, ST_Segmentize now splits segments proportionally (Darafei
    Praliaskouski).
  - #4162, ST_DWithin documentation examples for storing geometry and
    radius in table (Darafei Praliaskouski, github user Boscop).
  - #4163, MVT: Fix resource leak when the first geometry is NULL (Raúl Marín)
  - #4161, MVT: Drop geometries smaller than the resolution (Raúl Marín)
  - #4172, Fix memory leak in lwgeom_offsetcurve (Raúl Marín)
  - #4173, Fix undefined behaviour in ptarray_segmentize2d (Raúl Marín)
  - #4176, ST_Intersects supports GEOMETRYCOLLECTION (Darafei Praliaskouski)
  - #4177, Postgres 12 disallows variable length arrays in C (Laurenz Albe)
  - #4160, Use qualified names in topology extension install (Raúl Marín)

PostGIS 2.5.0rc1
2018/08/19
New since PostGIS 2.5.0beta2
  - #4146, Fix compilation error against Postgres 12 (Raúl Marín).
  - #4147, #4148, Honor SOURCE_DATE_EPOCH when present (Christoph Berg).

PostGIS 2.5.0beta2
2018/08/11
New since PostGIS 2.5.0beta1
  - #4115, Fix a bug that created MVTs with incorrect property values under
    parallel plans (Raúl Marín).
  - #4120, ST_AsMVTGeom: Clip using tile coordinates (Raúl Marín).
  - #4132, ST_Intersection on Raster now works without throwing TopologyException
    (Vinícius A.B. Schmidt, Darafei Praliaskouski)
  - #4109, Fix WKT parser accepting and interpreting numbers with
    multiple dots (Raúl Marín, Paul Ramsey)
  - #4140, Use user-provided CFLAGS in address standardizer and the
    topology module (Raúl Marín)
  - #4143, Fix backend crash when ST_OffsetCurve fails (Dan Baston)
  - #4145, Speedup MVT column parsing (Raúl Marín)

  See PostGIS 2.5.0 section for full details


PostGIS 2.5.0beta1
2018/07/03
New since PostGIS 2.5.0alpha